Update fr_fr for real this time
-added the new crimson and warped boats stuff 
-made more consistent  with vanilla translation for "with furnace"

--- a/src/main/resources/assets/boatload/lang/fr_fr.json
+++ b/src/main/resources/assets/boatload/lang/fr_fr.json
@@ -1,16 +1,26 @@
 {
   "entity.boatload.furnace_boat": "Bateau motorisé",
   "entity.boatload.large_boat": "Grand bateau",
-  "item.boatload.oak_furnace_boat": "Bateau en ch\u00eane motorisé",
-  "item.boatload.spruce_furnace_boat": "Bateau en sapin motorisé",
-  "item.boatload.birch_furnace_boat": "Bateau en bouleau motorisé",
-  "item.boatload.jungle_furnace_boat": "Bateau en acajou motorisé",
   "item.boatload.acacia_furnace_boat": "Bateau en acacia motorisé",
-  "item.boatload.dark_oak_furnace_boat": "Bateau en ch\u00eane noir motorisé",
-  "item.boatload.large_oak_boat": "Grand bateau en ch\u00eane",
-  "item.boatload.large_spruce_boat": "Grand bateau en sapin",
-  "item.boatload.large_birch_boat": "Grand bateau en bouleau",
-  "item.boatload.large_jungle_boat": "Grand bateau en acajou",
+  "item.boatload.birch_furnace_boat": "Bateau en bouleau motorisé",
+  "item.boatload.crimson_boat": "Bateau carmin",
+  "item.boatload.crimson_chest_boat": "Bateau de stockage carmin",
+  "item.boatload.crimson_furnace_boat": "Bateau carmin motorisé",
+  "item.boatload.dark_oak_furnace_boat": "Bateau en chêne noir motorisé",
+  "item.boatload.jungle_furnace_boat": "Bateau en acajou motorisé",
   "item.boatload.large_acacia_boat": "Grand bateau en acacia",
-  "item.boatload.large_dark_oak_boat": "Grand bateau en ch\u00eane noir"
+  "item.boatload.large_birch_boat": "Grand bateau en bouleau",
+  "item.boatload.large_crimson_boat": "Grand bateau carmin",
+  "item.boatload.large_dark_oak_boat": "Grand bateau en chêne noir",
+  "item.boatload.large_jungle_boat": "Grand bateau en acajou",
+  "item.boatload.large_mangrove_boat": "Grand bateau en palétuvier",
+  "item.boatload.large_oak_boat": "Grand bateau en chêne",
+  "item.boatload.large_spruce_boat": "Grand bateau en sapin",
+  "item.boatload.large_warped_boat": "Grand bateau biscornu",
+  "item.boatload.mangrove_furnace_boat": "Bateau en palétuvier motorisé",
+  "item.boatload.oak_furnace_boat": "Bateau en chêne motorisé",
+  "item.boatload.spruce_furnace_boat": "Bateau en sapin motorisé",
+  "item.boatload.warped_boat": "Bateau biscornu",
+  "item.boatload.warped_chest_boat": "Bateau de stockage biscornu",
+  "item.boatload.warped_furnace_boat": "Bateau biscornu motorisé"
 }
