--- a/src/main/resources/assets/boatload/lang/it_it.json
+++ b/src/main/resources/assets/boatload/lang/it_it.json
@@ -14,14 +14,13 @@
   "item.boatload.crimson_furnace_boat": "Barca cremisi con fornace",
   "item.boatload.warped_furnace_boat": "Barca distorta con fornace",
   "item.boatload.mangrove_furnace_boat": "Barca di mangrovia con fornace",
-  "item.boatload.large_oak_boat": "Barca di quercia grande",
-  "item.boatload.large_spruce_boat": "Barca di abete grande",
-  "item.boatload.large_birch_boat": "Barca di betulla grande",
-  "item.boatload.large_jungle_boat": "Barca della giungla grande",
-  "item.boatload.large_acacia_boat": "Barca di acacia grande",
-  "item.boatload.large_dark_oak_boat": "Barca di quercia scura grande",
-  "item.boatload.warped_furnace_boat": "Barca distorta con fornace",
+  "item.boatload.large_oak_boat": "Barca grande di quercia",
+  "item.boatload.large_spruce_boat": "Barca grande di abete",
+  "item.boatload.large_birch_boat": "Barca grande di betulla",
+  "item.boatload.large_jungle_boat": "Barca grande della giungla",
+  "item.boatload.large_acacia_boat": "Barca grande di acacia",
+  "item.boatload.large_dark_oak_boat": "Barca grande di quercia scura",
   "item.boatload.large_crimson_boat": "Barca grande cremisi",
   "item.boatload.large_warped_boat": "Barca grande distorta"
-  "item.boatload.large_mangrove_boat": "Barca di mangrovia grande",
+  "item.boatload.large_mangrove_boat": "Barca grande di mangrovia",
 }
