--- a/src/main/resources/assets/boatload/lang/it_it.json
+++ b/src/main/resources/assets/boatload/lang/it_it.json
@@ -21,6 +21,6 @@
   "item.boatload.large_acacia_boat": "Barca grande di acacia",
   "item.boatload.large_dark_oak_boat": "Barca grande di quercia scura",
   "item.boatload.large_crimson_boat": "Barca grande cremisi",
-  "item.boatload.large_warped_boat": "Barca grande distorta"
-  "item.boatload.large_mangrove_boat": "Barca grande di mangrovia",
+  "item.boatload.large_warped_boat": "Barca grande distorta",
+  "item.boatload.large_mangrove_boat": "Barca grande di mangrovia"
 }
