--- a/src/main/resources/assets/boatload/lang/ru_ru.json
+++ b/src/main/resources/assets/boatload/lang/ru_ru.json
@@ -2,17 +2,25 @@
   "entity.boatload.furnace_boat": "Самоходная лодка",
   "entity.boatload.large_boat": "Большая лодка",
   "item.boatload.acacia_furnace_boat": "Акациевая самоходная лодка",
-  "item.boatload.birch_furnace_boat": "Берёзовая самоходная лодкай",
+  "item.boatload.birch_furnace_boat": "Берёзовая самоходная лодка",
+  "item.boatload.crimson_boat": "Багровая лодка",
+  "item.boatload.crimson_chest_boat": "Багровая грузовая лодка",
+  "item.boatload.crimson_furnace_boat": "Багровая самоходная лодка",
   "item.boatload.dark_oak_furnace_boat": "Самоходная лодка из тёмного дуба",
   "item.boatload.jungle_furnace_boat": "Самоходная лодка из тропического дерева",
-  "item.boatload.large_acacia_boat": "Большая акациевая лодка",
-  "item.boatload.large_birch_boat": "Большая берёзовая лодка",
+  "item.boatload.large_acacia_boat": "Акациевая большая лодка",
+  "item.boatload.large_birch_boat": "Берёзовая большая лодка",
+  "item.boatload.large_crimson_boat": "Багровая большая лодка",
   "item.boatload.large_dark_oak_boat": "Большая лодка из тёмного дуба",
   "item.boatload.large_jungle_boat": "Большая лодка из тропического дерева",
-  "item.boatload.large_mangrove_boat": "Большая мангровая лодка",
-  "item.boatload.large_oak_boat": "Большая дубовая лодка",
-  "item.boatload.large_spruce_boat": "Большая еловая лодка",
+  "item.boatload.large_mangrove_boat": "Мангровая большая лодка",
+  "item.boatload.large_oak_boat": "Дубовая большая лодка",
+  "item.boatload.large_spruce_boat": "Еловая большая лодка",
+  "item.boatload.large_warped_boat": "Искажённая большая лодка",
   "item.boatload.mangrove_furnace_boat": "Мангровая самоходная лодка",
   "item.boatload.oak_furnace_boat": "Дубовая самоходная лодка",
-  "item.boatload.spruce_furnace_boat": "Еловая самоходная лодка"
+  "item.boatload.spruce_furnace_boat": "Еловая самоходная лодка",
+  "item.boatload.warped_boat": "Искажённая лодка",
+  "item.boatload.warped_chest_boat": "Искажённая грузовая лодка",
+  "item.boatload.warped_furnace_boat": "Искажённая самоходная лодка"
 }
