--- a/src/main/resources/assets/boatload/lang/pl_pl.json
+++ b/src/main/resources/assets/boatload/lang/pl_pl.json
@@ -3,16 +3,24 @@
   "entity.boatload.large_boat": "Wielka łódka",
   "item.boatload.acacia_furnace_boat": "Akacjowa łódka z piecem",
   "item.boatload.birch_furnace_boat": "Brzozowa łódka z piecem",
+  "item.boatload.crimson_boat": "Szkarłatna łódka",
+  "item.boatload.crimson_chest_boat": "Szkarłatna łódka skrzynią",
+  "item.boatload.crimson_furnace_boat": "Szkarłatna łódka z piecem",
   "item.boatload.dark_oak_furnace_boat": "Ciemnodębowa łódka z piecem",
   "item.boatload.jungle_furnace_boat": "Tropikalna łódka z piecem",
   "item.boatload.large_acacia_boat": "Wielka akacjowa łódka",
   "item.boatload.large_birch_boat": "Wielka brzozowa łódka",
+  "item.boatload.large_crimson_boat": "Wielka szkarłatna łódka",
   "item.boatload.large_dark_oak_boat": "Wielka ciemnodębowa łódka",
   "item.boatload.large_jungle_boat": "Wielka tropikalna łódka",
   "item.boatload.large_mangrove_boat": "Wielka namorzynowa łódka",
   "item.boatload.large_oak_boat": "Wielka dębowa łódka",
   "item.boatload.large_spruce_boat": "Wielka świerkowa łódka",
+  "item.boatload.large_warped_boat": "Wielka spaczona łódka",
   "item.boatload.mangrove_furnace_boat": "Namorzynowa łódka z piecem",
   "item.boatload.oak_furnace_boat": "Dębowa łódka z piecem",
-  "item.boatload.spruce_furnace_boat": "Świerkowa łódka z piecem"
+  "item.boatload.spruce_furnace_boat": "Świerkowa łódka z piecem",
+  "item.boatload.warped_boat": "Spaczona łódka",
+  "item.boatload.warped_chest_boat": "Spaczona łódka ze skrzynią",
+  "item.boatload.warped_furnace_boat": "Spaczona łódka z piecem"
 }
