--- a/src/main/resources/assets/boatload/lang/ko_kr.json
+++ b/src/main/resources/assets/boatload/lang/ko_kr.json
@@ -1,22 +1,26 @@
 {
   "entity.boatload.furnace_boat": "화로가 실린 보트",
-  "entity.boatload.large_boat": "큰 보트",
+  "entity.boatload.large_boat": "거대한 보트",
+  "item.boatload.acacia_furnace_boat": "화로가 실린 아카시아나무 보트",
+  "item.boatload.birch_furnace_boat": "화로가 실린 자작나무 보트",
+  "item.boatload.crimson_boat": "진홍빛 보트",
+  "item.boatload.crimson_chest_boat": "상자가 실린 진홍빛 보트",
+  "item.boatload.crimson_furnace_boat": "화로가 실린 진홍빛 보트",
+  "item.boatload.dark_oak_furnace_boat": "화로가 실린 짙은 참나무 보트",
+  "item.boatload.jungle_furnace_boat": "화로가 실린 정글나무 보트",
+  "item.boatload.large_acacia_boat": "거대한 아카시아나무 보트",
+  "item.boatload.large_birch_boat": "거대한 자작나무 보트",
+  "item.boatload.large_crimson_boat": "거대한 진홍빛 보트",
+  "item.boatload.large_dark_oak_boat": "거대한 짙은 참나무 보트",
+  "item.boatload.large_jungle_boat": "거대한 정글나무 보트",
+  "item.boatload.large_mangrove_boat": "거대한 맹그로브나무 보트",
+  "item.boatload.large_oak_boat": "거대한 참나무 보트",
+  "item.boatload.large_spruce_boat": "거대한 가문비나무 보트",
+  "item.boatload.large_warped_boat": "거대한 뒤틀린 보트",
+  "item.boatload.mangrove_furnace_boat": "화로가 실린 맹그로브나무 보트",
   "item.boatload.oak_furnace_boat": "화로가 실린 참나무 보트",
   "item.boatload.spruce_furnace_boat": "화로가 실린 가문비나무 보트",
-  "item.boatload.birch_furnace_boat": "화로가 실린 자작나무 보트",
-  "item.boatload.jungle_furnace_boat": "화로가 실린 정글 나무 보트",
-  "item.boatload.acacia_furnace_boat": "화로가 실린 아카시아나무 보트",
-  "item.boatload.dark_oak_furnace_boat": "화로가 실린 짙은 참나무 보트",
-  "item.boatload.large_oak_boat": "큰 참나무 보트",
-  "item.boatload.large_spruce_boat": "큰 가문비나무 보트",
-  "item.boatload.large_birch_boat": "큰 자작나무 보트",
-  "item.boatload.large_jungle_boat": "큰 정글 나무 보트",
-  "item.boatload.large_acacia_boat": "큰 아카시아나무 보트",
-  "item.boatload.large_dark_oak_boat": "큰 짙은 참나무 보트",
-  "item.boatload.crimson_chest_boat": "상자가 실린 진홍빛 보트",
+  "item.boatload.warped_boat": "뒤틀린 보트",
   "item.boatload.warped_chest_boat": "상자가 실린 뒤틀린 보트",
-  "item.boatload.crimson_furnace_boat": "화로가 실린 진홍빛 보트",
-  "item.boatload.warped_furnace_boat": "화로가 실린 뒤틀린 보트",
-  "item.boatload.large_crimson_boat": "큰 진홍빛 보트",
-  "item.boatload.large_warped_boat": "큰 뒤틀린 보트"
+  "item.boatload.warped_furnace_boat": "화로가 실린 뒤틀린 보트"
 }
