--- a/src/main/resources/assets/boatload/lang/uk_ua.json
+++ b/src/main/resources/assets/boatload/lang/uk_ua.json
@@ -1,13 +1,13 @@
 {
-  "entity.boatload.furnace_boat": "Човен з піччю",
+  "entity.boatload.furnace_boat": "Човен із піччю",
   "entity.boatload.large_boat": "Великий човен",
-  "item.boatload.acacia_furnace_boat": "Акацієвий човен з піччю",
-  "item.boatload.birch_furnace_boat": "Березовий човен з піччю",
+  "item.boatload.acacia_furnace_boat": "Акацієвий човен із піччю",
+  "item.boatload.birch_furnace_boat": "Березовий човен із піччю",
   "item.boatload.crimson_boat": "Багряний човен",
   "item.boatload.crimson_chest_boat": "Багряний човен зі скринею",
-  "item.boatload.crimson_furnace_boat": "Багряний човен з піччю",
-  "item.boatload.dark_oak_furnace_boat": "Темно-дубовий човен з піччю",
-  "item.boatload.jungle_furnace_boat": "Тропічний човен з піччю",
+  "item.boatload.crimson_furnace_boat": "Багряний човен із піччю",
+  "item.boatload.dark_oak_furnace_boat": "Темно-дубовий човен із піччю",
+  "item.boatload.jungle_furnace_boat": "Тропічний човен із піччю",
   "item.boatload.large_acacia_boat": "Великий акацієвий човен",
   "item.boatload.large_birch_boat": "Великий березовий човен",
   "item.boatload.large_crimson_boat": "Великий багряний човен",
@@ -17,10 +17,10 @@
   "item.boatload.large_oak_boat": "Великий дубовий човен",
   "item.boatload.large_spruce_boat": "Великий смерековий човен",
   "item.boatload.large_warped_boat": "Великий химерний човен",
-  "item.boatload.mangrove_furnace_boat": "Мангровий човен з піччю",
-  "item.boatload.oak_furnace_boat": "Дубовий човен з піччю",
-  "item.boatload.spruce_furnace_boat": "Смерековий човен з піччю",
+  "item.boatload.mangrove_furnace_boat": "Мангровий човен із піччю",
+  "item.boatload.oak_furnace_boat": "Дубовий човен із піччю",
+  "item.boatload.spruce_furnace_boat": "Смерековий човен із піччю",
   "item.boatload.warped_boat": "Химерний човен",
   "item.boatload.warped_chest_boat": "Химерний човен зі скринею",
-  "item.boatload.warped_furnace_boat": "Химерний човен з піччю"
+  "item.boatload.warped_furnace_boat": "Химерний човен із піччю"
 }
